# Pane

./: README.md  missing pieces  pane-architecture.md
pane-app/: .gitignore  electron.vite.config.ts  eslint.config.js  index.html  notes.md  package-lock.json  package.json  tsconfig.json
pane-app/scripts/: copy-compiled.js  dev.js
pane-app/src/: App.tsx  main.tsx
pane-app/src-tauri/: Cargo.toml  tauri.conf.json
pane-app/src-tauri/capabilities/: default.json
pane-app/src-tauri/icons/: icon.icns
pane-app/src-tauri/src/: claude.rs  commands.rs  lib.rs  main.rs  settings.rs  traffic_lights.rs  watcher.rs
pane-app/src/components/: ErrorBoundary.tsx
pane-app/src/components/ControlPanel/: ControlPanel.tsx  FileTree.tsx  GitStatus.tsx  ProjectList.tsx
pane-app/src/components/FileSearch/: FileSearch.tsx
pane-app/src/components/FuzzyFinder/: FuzzyFinder.tsx
pane-app/src/components/Settings/: Settings.tsx
pane-app/src/components/Workspace/: Conversation.tsx  FileViewer.tsx  InputBar.tsx  MessageBubble.tsx  ToolActivity.tsx  Workspace.tsx
pane-app/src/components/shared/: ContextMenu.tsx  (+1 more)
pane-app/src/hooks/: useClaude.ts  useCodeMirror.ts  useFileWatcher.ts  useGitStatus.ts  useSettingsPersistence.ts
pane-app/src/lib/: claude-types.ts  tauri-commands.ts
pane-app/src/main/: brain-engine.mjs  claude-worker.mjs  index.ts  main.mjs  pane-mcp-server.mjs  pty-worker.mjs
pane-app/src/preload/: index.ts  preload.mjs
pane-app/src/renderer/: App.tsx  index.html  main.tsx
pane-app/src/stores/: projects.ts  workspace.ts
pane-app/src/styles/: globals.css
(+33 files in other folders)
