[package]
name = "pane"
version = "0.1.0"
description = "One view. No noise."
authors = ["Aslam"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
notify = "7"
notify-debouncer-mini = "0.5"
ignore = "0.4"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["process", "io-util"] }
libc = "0.2"
objc2 = "0.6.3"
